--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/website1.ico">
   <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="Yibo Wang" content="862178202">
 
-  <title>John Doe - Business Administration</title>
+  <title>Yibo Wang - Customer Experience Evaluator</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Yibo Wang</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Yibo Wang.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Yibo Wang
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Customer Experience Evaluator📚</div>
+        <p class="lead mb-4">It is an honor to introduce myself here! My name is Yibo Wang, and I was born on August 27, 1999. I am a Chinese student studying in the United States. My current major is Underclear. I had an internship at Schindler Elevator Company in June 2020. During the internship, I served as the secretary of the company's human resources minister. I have strong ability to communicate with others and understand language.I am very good at getting along with people, so I have learned all kinds of knowledge about physical sales. During this period I gained some very precious experience. The success of a company is inseparable from a sound order, a perfect framework, and products that meet the customer base. I personally think that among these three necessary conditions, the product is the most important. To make products that meet the satisfaction of consumer groups, it is necessary to understand consumers' feedback on using related products and their willingness to consume.<br><br>
 
-        Enter bio here<br><br>
+        I have relevant internship experience and have a certain working foundation for meeting customer requirements and understanding customer needs. And since the internship process, I have never received complaints or dissatisfaction from clients. On the contrary, my internship results are the best among fresh interns. Many people tend to ignore the role of the department in the company or a team. This is also one of the important factors that some sales groups cannot make profits. I have certain advantages in customer communication. This also mentioned a great help for my growth and learning. And in the process of customer communication, customers can often get valuable suggestions on product opinions and opinions. These suggestions are very real. Compared with the perfunctory filling out the questionnaire, they will show more true feelings in the conversation. Customer experience feedback is not a common profession, but I firmly believe in the big market in the future. People will pay more and more attention to the product quality and design concepts around them. These feedbacks from customers are very precious and rare. It is impossible to get customers' views and opinions on all aspects of the product only through pure service departments or questionnaires. This is an occupation that will inevitably become popular in an increasingly competitive market.<br><br>
 
-        Enter bio here
+        In addition, I have participated in supporter activities many times. This includes taking care of the elderly and disseminating knowledge about life safety. He also won the runner-up in the provincial competition of Chinese e-sports. My role in these activities is often the leader. I think I have certain leadership skills. I am honest and trustworthy, have a rigorous and serious working attitude, flexible in thinking about things, and know how to use all the resources around me in specific situations. Possess a positive attitude towards life and a wide range of hobbies, as well as good psychological quality and hard-working spirit, a unique understanding of things, and a strong ability to cooperate. I have the vigor and vitality unique to young people, and I have the brain and courage to start a career. During the current school, I use vacation and spare time to participate in a series of activities to enrich my knowledge and prepare for work after graduation.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="linkedin" href="https://linkedin.com">
+          <a target="_blank" id="linkedin" href="https://linkedin.com/YiboWang">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="github" href="https://github.com">
+          <a target="_blank" id="github" href="https://github.com/Ywang914">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="twitter" href="https://twitter.com">
+          <a target="_blank" id="twitter" href="Ywang914@ucr.edu">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="email" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="email" href="Ywang914@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -110,12 +110,13 @@
             <h3 class="mb-0">Cashier</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              •Intern of  Secretary of Henan, China Human Resources Department of Schindler Elevator<br>
+              •Intern of Human Resources Department of Bank of China<br>
+              •Intern of FB deskgame club HR
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2018 - October 2020</span>
           </div>
         </div>
 
@@ -152,29 +153,29 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Underclear Major</div>
+            <div>Underclear Major Still</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2019 - December 2013</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Second year UCR studnet</div>
+            <div>None</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">August 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
+            <div class="subheading mb-3">Still processing</div>
             <div>Information Systems</div>
           </div>
           <div class="resume-date text-md-right">
@@ -191,7 +192,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/imageA" width="500px">
+            <img src="img/imageB" width="500px"><br>
+            <img src="img/imageC" width="500px">
+            <img src="img/imageD" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +203,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Yibo Wang</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
